# accelerator

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  com.fyralabs.Accelerator.json  meson.build  meson_options.txt
.github/workflows/: ci.yml  deploy.yml
data/: com.fyralabs.Accelerator.appdata.xml.in  com.fyralabs.Accelerator.desktop.in  com.fyralabs.Accelerator.gschema.xml  meson.build
data/icons/: meson.build
data/schemes/: helium-dark.json  helium-light.json  pencil-dark.json
po/: LINGUAS  POTFILES  accelerator.pot  ar.po  cs.po  de.po  en_XOWO.po  en_owo.po  es.po  fi.po  fr.po  id.po  it.po  ja.po  meson.build  nl.po  oc.po  pl.po  pt_BR.po  ru.po  sv.po  th.po  tr.po  vi.po  yue.po  zh_CN.po  zh_Hant.po
src/: Application.vala  accelerator.gresource.xml  blackbox-link-system-fonts  config.vala.in  meson.build
src/gtk/: help-overlay.blp  meson.build  preferences-window.blp  preferences-window.ui  search-toolbar.blp  shortcut-dialog.blp  shortcut-dialog.ui  shortcut-editor.blp
src/resources/: style-dark.css  style.css
src/services/: Settings.vala  Shortcuts.vala  ThemeProvider.vala  meson.build
src/utils/: Constants.vala  Css.vala  meson.build
src/widgets/: AboutDialog.vala  ColorSchemeThumbnail.vala  HeaderBar.vala  PreferencesWindow.vala  SearchToolbar.vala  ShortcutDialog.vala  ShortcutEditor.vala  Terminal.vala  TerminalTab.vala  Window.vala  meson.build
